--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,20 +1,15 @@
-<selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="true" >
-        <shape android:shape="rectangle"  >
-            <corners android:radius="14dip" />
-            <solid android:color="#8E24AA"/>
-        </shape>
-    </item>
-    <item android:state_focused="true">
-        <shape android:shape="rectangle"  >
-            <corners android:radius="14dip" />
-            <solid android:color="#8E24AA"/>
-        </shape>
-    </item>
-    <item >
-        <shape android:shape="rectangle"  >
-            <corners android:radius="14dip" />
-            <solid android:color="#8E24AA"/>
-        </shape>
-    </item>
-</selector>
+<shape
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:shape="rectangle"
+>
+    <corners
+            android:radius="3dp"
+    />
+    <stroke
+            android:width="2dp"
+            android:color="@color/colorPrimary"
+    />
+    <solid
+            android:color="@android:color/transparent"
+    />
+</shape>
