--- a/app/src/main/res/layout/dialog_buttons.xml
+++ b/app/src/main/res/layout/dialog_buttons.xml
@@ -1,52 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-        android:id="@+id/llButtons"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/llDialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+        android:orientation="vertical">
 
-    <Button
-            android:id="@+id/buttonGetNumberInfo"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:fontFamily="@fonts/Roboto-Medium.ttf"
-            android:text="Math"
-            android:background="@android:color/transparent"
-            android:layout_gravity="center_horizontal"
-            android:textColor="#000000" />
-
-    <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@drawable/gradient_bg"/>
-
-    <Button
-            android:id="@+id/buttonGetDateInfo"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
+    <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="What type of number did you enter?"
             android:layout_gravity="center_horizontal"
             android:fontFamily="@fonts/Roboto-Medium.ttf"
-            android:text="Date"
-            android:textColor="#000000" />
+            android:textSize="16sp"
+            android:textColor="#000000"/>
 
-    <View
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@drawable/gradient_bg"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
 
-    <Button
-            android:id="@+id/buttonGetYearInfo"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:layout_gravity="center_horizontal"
-            android:fontFamily="@fonts/Roboto-Medium.ttf"
-            android:text="Year"
-            android:textColor="#000000" />
+        <Button
+                android:id="@+id/buttonGetNumberInfo"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@fonts/Roboto-Medium.ttf"
+                android:text="Math"
+                android:layout_margin="10dp"
+                android:background="@drawable/button_background"
+                android:layout_gravity="center_horizontal"
+                android:textColor="#000000"/>
+
+
+        <Button
+                android:id="@+id/buttonGetDateInfo"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/button_background"
+                android:layout_margin="10dp"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@fonts/Roboto-Medium.ttf"
+                android:text="Date"
+                android:textColor="#000000"/>
+
+        <Button
+                android:id="@+id/buttonGetYearInfo"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/button_background"
+                android:layout_margin="10dp"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@fonts/Roboto-Medium.ttf"
+                android:text="Year"
+                android:textColor="#000000"/>
+
+    </LinearLayout>
 
 </LinearLayout>
